Sredjivanje teksta i komentarisanje koda (drugi deo)

--- a/kernel.bib
+++ b/kernel.bib
@@ -7,6 +7,11 @@
     title = {OsDev Wiki},
     url = {https://wiki.osdev.org/Expanded_Main_Page}
 }
+@misc{misc:3,
+    title = {System V Application Binary Interface AMD64 Architecture Processor Supplement},
+    author = {Intel},
+    url = {https://www.intel.com/content/dam/develop/external/us/en/documents/mpx-linux64-abi.pdf}
+}
 @book{book:1412,
    title =     {Algorithms},
    author =    {Sanjoy Dasgupta and Christos Papadimitriou and Umesh Vazirani},
